<resources>
    <string name="app_name">Nutrimax</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_spaces">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="record_meal">Record Meal</string>
    <string name="add_food">Add Food</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="activity_level">Activity Level</string>
    <string name="gender">Gender</string>
    <string name="target">Target</string>
    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Active</item>
        <item>Highly active</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="target_list">
        <item>Lose weight</item>
        <item>Maintain</item>
        <item>Gain weight</item>
    </string-array>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="carbo">Carbo : </string>
    <string name="fats">Fats : </string>
    <string name="proteins">Proteins : </string>
    <string name="detailed_report">Detailed report</string>
    <string name="consumed_today">consumed today</string>
    <string name="kcal">KCal</string>
</resources>