<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/BackGroundImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_form"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="138dp"
                app:srcCompat="@drawable/logo_large_fit"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etRegUsername"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center|left"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#575656"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#575656"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegPass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#575656"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegPass_Verification"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="center|left"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textColorHint="#575656"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/rounded_corner"
                    android:text="Register"
                    android:textColor="#101010"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#5EDAA8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already registered"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvLoginHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Login here"
                        android:textColor="@color/teal_200"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>